--- a/styleabout.css
+++ b/styleabout.css
@@ -97,6 +97,7 @@ body {
 
 /*<!--HERO-->*/
 .Hero-Container{
+  position: relative;
   width: 83.12vw;
   height: 51.3vh;
   margin: 0 auto;
@@ -118,6 +119,14 @@ body {
   height: 100%;
   width: auto;
   float: left;
+}
+
+.Joker1{
+  display: none;
+}
+
+.Harley1{
+  display: none;
 }
 
 .AboutUs1{
@@ -205,16 +214,17 @@ body {
   margin-top: 1%;
   margin-left: 1%;
   background-color: #FFF;
-  width: 19.23vw;
-  height: 5.3vh;
+  width: 26.23vw;
+  height: 7.3vh;
   border: solid black;
 }
 
 .Narration p{
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  padding: 1%;
+  padding: 2%;
   font-weight: 700;
   text-align: center;
+  font-size: large;
 }
 
 .Batman2{
@@ -235,7 +245,7 @@ body {
 }
 
 .first p{
-  margin-top: 5%;
+  margin-top: 3%;
   font-weight: 600;
 }
 
@@ -326,7 +336,7 @@ body {
 }
 
 .third p{
-  margin-top: 10%;
+  margin-top: 6%;
   font-size: larger;
   font-weight: 600;
 }
@@ -339,7 +349,7 @@ body {
 }
 
 .fourth p{
-  margin-top: 8%;
+  margin-top: 5%;
   width: 65%;
   font-size: larger;
   font-weight: 600;
@@ -371,11 +381,25 @@ body {
   }
 
 .ComicLove{
-  justify-content: center;
+  bottom: -15%;
+  left: 50%;
+  width: 100%;
+  height: auto;
+  transform: translateX(-50%); 
+  text-align: center;
   position: absolute;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-size: 90px;
+  font-size: 100px;
   color: #61DA69;
+  text-shadow: 
+  3px 3px 0px black, 
+  -3px -3px 0px black, 
+  3px -3px 0px black, 
+  -3px 3px 0px black, 
+  0px 3px 0px black, 
+  0px -3px 0px black, 
+  3px 0px 0px black, 
+  -3px 0px 0px black;
 }
 
 /*<!--FOOTER-->*/
@@ -574,7 +598,118 @@ body {
   height: 20vh;
 }
 
+.MilesnGwen{
+  display: none;
+}
 
+.Joker1{
+  display: block;
+  object-fit: contain;
+  max-height: 100%;  ;
+  height: 100%;
+  width: auto;
+  float: left;
+}
+
+.Harley1{
+  display: block;
+  object-fit: contain;
+  max-height: 100%;  ;
+  height: 100%;
+  width: auto;
+  float: right;
+}
+
+.AboutUs1{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -100%);
+  color: white;
+  text-shadow: 
+  3px 3px 0px black, 
+  -3px -3px 0px black, 
+  3px -3px 0px black, 
+  -3px 3px 0px black, 
+  0px 3px 0px black, 
+  0px -3px 0px black, 
+  3px 0px 0px black, 
+  -3px 0px 0px black; ;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 5vw;
+  font-style: italic;
+}
+
+
+.first{
+  left: 50%;
+  transform: translate(-50%, 0%);
+  top: 25px;
+  width: 20.25vw;
+  height: 8.75vh;
+}
+
+.first p{
+  margin-top: -6%;
+  font-weight: 600;
+  font-size: 7.5px;
+}
+
+.second{
+  left: 50%;
+  transform: translate(-50%, 0%);
+  top: 25px;
+  width: 18.25vw;
+  height: 7.75vh;
+}
+
+.second p{
+  margin-top: -5%;
+  font-weight: 600;
+  font-size: 9px;
+  
+}
+
+.third{
+  left: 40%;
+  top: 20px;
+  transform: translate(-50%, 0);
+  width: 14.25vw;
+  height: 4.75vh;
+}
+
+.third p{
+  margin-top: -10%;
+  font-weight: 600;
+  font-size: 7px;
+}
+
+.fourth {
+  left: 62%;
+  transform: translate(-50%, -45%);
+  width: 14.25vw;
+  height: 4.75vh;
+}
+
+.fourth p{
+  margin-top: -10%;
+  font-weight: 600;
+  font-size: 8px;
+  width: 80%;
+}
+
+.ComicLove{
+  bottom: -5%;
+  font-size: 20px;
+}
+
+.Narration{
+  height: 5vh;
+}
+
+.Narration p{
+  font-size: 10px;
+}
 
   /*<!--FOOTER---------------------------------------------------------------------------->*/
 .Contact{
