--- a/stylecatalog.css
+++ b/stylecatalog.css
@@ -135,6 +135,14 @@ body {
   width: auto;
 }
 
+.Megaman1{
+  display: none;
+}
+
+.Hellboy1{
+  display: none;
+}
+
 .CatalogText{
   left: 10%;
   position: relative;
@@ -203,14 +211,6 @@ body {
   font-size: 1.3vw;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   border-width: 2px;
-}
-
-.NextBut{
-  display: none;
-}
-
-.PrevBut{
-  display: none;
 }
 
 .SortBut{
@@ -296,6 +296,38 @@ body {
 .WSoldier{
   grid-column: 8/10;
 }
+
+.NextBut{
+  margin-top: 44px;
+  background-color: #FFF;
+  display: block;
+  grid-column: 9/10;
+  font-size: larger;
+  height: 5vh;
+  border-radius: 5px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  transition-duration: 0.1s;
+}
+
+.PrevBut{
+  margin-top: 44px;
+  background-color: #FFF;
+  display: block;
+  grid-column: 2/3;
+  color: #a1a1a1;
+  border-color: #a1a1a1;
+  font-size: larger;
+  height: 5vh;
+  border-radius: 5px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  transition-duration: 0.1s;
+}
+
+.NextBut:hover{
+    background-color: #a1a1a1;
+  }
+
+
 /*<!--CONTAINER CONSTANTS-->*/
 .Main-Container h2{
   font-size: 1.8vw;
@@ -650,6 +682,24 @@ body {
   display: none;
 }
 
+.Megaman1{
+  display: block;
+  object-fit: contain;
+  max-height: 100%;  
+  height: 100%;
+  width: auto;
+  float: left;
+}
+
+.Hellboy1{
+  display: block;
+  object-fit: contain;
+  max-height: 100%;  
+  height: 100%;
+  width: auto;
+  float: right;
+}
+
 .CatalogText{
   position: absolute;
   left: 50%;
@@ -711,6 +761,7 @@ body {
   }
 
   .NextBut{
+    margin-top: 0;
     background-color: #FFF;
     display: block;
     grid-column: 5/6;
@@ -720,6 +771,7 @@ body {
   }
 
   .PrevBut{
+    margin-top: 0;
     background-color: #FFF;
     display: block;
     grid-column: 5/6;
