--- a/styleabout.css
+++ b/styleabout.css
@@ -141,7 +141,7 @@ body {
   0px 4px 0px black, 
   0px -4px 0px black, 
   4px 0px 0px black, 
-  -4px 0px 0px black; ;
+  -4px 0px 0px black; 
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 5vw;
   font-style: italic;
@@ -614,7 +614,7 @@ body {
 .Harley1{
   display: block;
   object-fit: contain;
-  max-height: 100%;  ;
+  max-height: 100%;  
   height: 100%;
   width: auto;
   float: right;
@@ -634,7 +634,7 @@ body {
   0px 3px 0px black, 
   0px -3px 0px black, 
   3px 0px 0px black, 
-  -3px 0px 0px black; ;
+  -3px 0px 0px black; 
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 5vw;
   font-style: italic;
