--- a/styleabout.css
+++ b/styleabout.css
@@ -607,7 +607,7 @@ body {
 .Joker1{
   display: block;
   object-fit: contain;
-  max-height: 100%;  ;
+  max-height: 100%;  
   height: 100%;
   width: auto;
   float: left;
@@ -616,7 +616,7 @@ body {
 .Harley1{
   display: block;
   object-fit: contain;
-  max-height: 100%;  ;
+  max-height: 100%;  
   height: 100%;
   width: auto;
   float: right;
