--- a/stylecontact.css
+++ b/stylecontact.css
@@ -139,7 +139,7 @@ body {
     0px 4px 0px black, 
     0px -4px 0px black, 
     4px 0px 0px black, 
-    -4px 0px 0px black; ;
+    -4px 0px 0px black; 
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 5vw;
     font-style: italic;
@@ -501,7 +501,7 @@ body {
   0px 3px 0px black, 
   0px -3px 0px black, 
   3px 0px 0px black, 
-  -3px 0px 0px black; ;
+  -3px 0px 0px black; 
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 5vw;
   font-style: italic;
