--- a/styleabout.css
+++ b/styleabout.css
@@ -646,7 +646,7 @@ body {
 .Joker1{
   display: block;
   object-fit: contain;
-  max-height: 100%;  ;
+  max-height: 100%;  
   height: 100%;
   width: auto;
   float: left;
