--- a/styleabout.css
+++ b/styleabout.css
@@ -158,7 +158,7 @@ body {
   display: flex;
   justify-content: center;
   position: relative;             
-  background-image: url("Images/About us/Rightbubble.png");
+  background-image: url("Images/About Us/Rightbubble.png");
   background-size: cover;        
   background-position: center;    
   padding: 30px;                 
@@ -173,7 +173,7 @@ body {
   display: flex;
   justify-content: center;
   position: relative;             
-  background-image: url("Images/About us/Leftbubble.png");
+  background-image: url("Images/About Us/Leftbubble.png");
   background-size: cover;        
   background-position: center;    
   padding: 30px;                 
